--- a/bet626/package.json
+++ b/bet626/package.json
@@ -7,15 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
-
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
