--- a/bet626/package.json
+++ b/bet626/package.json
@@ -8,14 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap"
-
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
