--- a/bet626/package.json
+++ b/bet626/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cocogame",
+  "name": "bet626",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,11 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-<<<<<<< HEAD
     "postbuild": "next-sitemap"
-=======
-    "postbuild": "next-sitemap --config next-sitemap.config.js"
->>>>>>> 490cfb9fad722aed47a62bafc678366064e93859
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
